# pkm-system

./: .beans.yml  .gitattributes  .gitignore  CLAUDE.md  HANDOVER-offline-sync.md  LICENSE  README.md  pyrefly.toml  pyrightconfig.json
server/: pyproject.toml
server/src/pkm/: edn.py  filenames.py  refs.py  refs_parity_dump.py  rename.py  schema.py  schema_dump.py  todo.py
server/src/pkm/backup/: __main__.py  rotation.py
server/src/pkm/cli/: build.py  main.py  render.py
server/src/pkm/client/: api.py  core.py
server/src/pkm/export/: markdown.py  writer.py
server/src/pkm/importer/: assets.py  import_sidebar.py  mermaid.py  migrate_mermaid_blocks.py  parse_export.py  report.py  rows.py  run.py  sidebar_rows.py
server/src/pkm/mcp/: server.py
server/src/pkm/server/: app.py  auth.py  auth_core.py  backlinks.py  config.py  daily.py  db.py  fts.py  mime_sniff.py  notify.py  openapi_dump.py  ops_apply.py  ops_core.py  query.py  response_models.py  routes_assets.py  routes_ops.py  routes_pages.py  run.py  (+9 more)
server/tests/: conftest.py  e2e_serve.py  test_asset_upload.py  test_assets.py  test_auth.py  test_backlinks.py  test_backup_cli.py  test_block_endpoint.py  test_block_refs_endpoint.py  test_cli_build.py  test_cli_main_read.py  test_cli_main_write.py  test_cli_render.py  test_client_api.py  test_client_core.py  test_config.py  test_current_work.py  test_daily.py  test_db_concurrency.py  test_edn.py  test_export_markdown.py  test_export_writer.py  test_filenames.py  test_hardening.py  test_import_sidebar.py  test_importer_e2e.py  test_journal_assets.py  test_journal_cleanup.py  test_mcp_server.py  test_mermaid.py  test_migrate_mermaid_blocks.py  test_mime_sniff.py  test_openapi_sync.py  test_ops_apply.py  test_ops_core.py  test_ops_endpoint.py  test_ops_idempotency.py  test_page_endpoint.py  test_parse_export.py  test_preflight.py  (+31 more)
server/tests/fixtures/: sample_export.edn
(+553 files in other folders)
