[project]
name = "pkm-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "websockets>=13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx2>=2.5.0",
    "pyrefly>=1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
