[project]
name = "pkm-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30",
    "websockets>=13",
    "httpx2>=2.5.0",
    "mcp>=1.28",
]

[project.scripts]
pkm = "pkm.cli.main:main"
pkm-mcp = "pkm.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pyrefly>=1.1",
    "ruff>=0.15.20",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pkm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pkm --cov-branch --cov-report=term-missing --cov-fail-under=95"

[tool.ruff]
line-length = 120
